version 2.0-rc0 11-Feb-2012
. [NEW] v1.1 Forward-ported changes:
		TileMap: Flipped tiles can be changed during runtime (issue #1264)
		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
. [NEW] LabelTTF: fontName and fontSize are properties
. [NEW] LabelBMFont: added setFntFile method
. [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
. [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
. [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
. [FIX] SpriteBatch: Quad extensions are public
. [FIX] Texture2D: initWithImage renamed with initWithCGImage
. [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone

version 2.0-beta2 17-Jan-2012
. [NEW] v1.1 Forward-ported changes:
		LabelTTF: word wrap works on Mac (issue #1074)
		Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ActionManager: It is no longer a singleton. It is an ivar of director
. [NEW] Director: it is a subclass of UIViewController (iOS only)
. [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
		automatically once the view is displayed (iOS only)
. [NEW] Director: FPS & seconds per frame are displayed at the same time
. [NEW] EventDispatcher / TouchDispatcher: They are no longer singletons. They are an ivar of director.
. [NEW] GL View: Some classes were renamed to have more API concistency:
		MacWindow -> CCWindow (Mac)
		MacView -> CCGLView (Mac)
		EAGLView -> CCGLView (iOS)
		ESRenderer -> CCESRenderer (iOS)
		ES2Renderer -> CCES2Renderer (iOS)
		GLProgram -> CCGLProgram
. [NEW] Macros: Using __CC_PLATFORM_IOS/MAC internally. Suggested way for games too.
. [NEW] Menu: API CHANGE. "itemFrom..." was replaced with "itemWith..."
. [NEW] Menu: target/selector pattern simulated with blocks. Before, blocks were simulated with target/selector