@@ -30,8 +30,39 @@
 #import "CCTexture2D.h"
 #import "CCTextureCache.h"
 
+#pragma mark - CCAnimationFrame
+@implementation CCAnimationFrame
+
+@synthesize spriteFrame = spriteFrame_, unitsOfTime = unitsOfTime_, offset = offset_;
+
+-(id) initWithSpriteFrame:(CCSpriteFrame *)spriteFrame unitsOfTime:(NSUInteger)unitsOfTime offset:(CGPoint)offset
+{
+	if( (self=[super init]) ) {
+		self.spriteFrame = spriteFrame;
+		self.unitsOfTime = unitsOfTime;
+		self.offset = offset;
+	}
+	
+	return self;
+}
+
+-(id) copyWithZone: (NSZone*) zone
+{
+	CCAnimationFrame *copy = [[[self class] allocWithZone: zone] initWithSpriteFrame:[[spriteFrame_ copy] autorelease] unitsOfTime:unitsOfTime_ offset:offset_];
+	return copy;
+}
+
+-(NSString*) description
+{
+	return [NSString stringWithFormat:@"<%@ = %08X | SpriteFrame = %@, unitsOfTime = %d>", [self class], self, self.spriteFrame, unitsOfTime_];
+}
+@end
+
+
+#pragma mark - CCAnimation
+
 @implementation CCAnimation
-@synthesize delay = delay_, frames = frames_;
+@synthesize delay = delay_, frames = frames_, duration=duration_, totalUnitsOfTime=totalUnitsOfTime_, unitOfTimeValue=unitOfTimeValue_;
 
 +(id) animation
 {
@@ -46,6 +77,11 @@
 +(id) animationWithFrames:(NSArray*)frames delay:(float)delay
 {
 	return [[[self alloc] initWithFrames:frames delay:delay] autorelease];
+}
+
++(id) animationWithFrames:(NSArray*)arrayOfAnimationFrames unitOfTimeValue:(float)unitOfTimeValue
+{
+	return [[[self alloc] initWithFrames:arrayOfAnimationFrames unitOfTimeValue:unitOfTimeValue] autorelease];
 }
 
 -(id) init
@@ -63,15 +99,46 @@
 	if( (self=[super init]) ) {
 
 		delay_ = delay;
-		self.frames = [NSMutableArray arrayWithArray:array];
+		
+		self.frames = [NSMutableArray arrayWithCapacity:[array count]];
+		duration_ = [array count] * delay;
+		
+		for( CCSpriteFrame *frame in array ) {
+			CCAnimationFrame *animFrame = [[CCAnimationFrame alloc] initWithSpriteFrame:frame unitsOfTime:1 offset:CGPointZero];
+			
+			[self.frames addObject:animFrame];
+			[animFrame release];
+			totalUnitsOfTime_++;
+		}
+		
+		unitOfTimeValue_ = delay_;
+	}
+	return self;
+}
+
+-(id) initWithFrames:(NSArray*)arrayOfAnimationFrames unitOfTimeValue:(float)unitOfTimeValue
+{
+	if( ( self=[super init]) ) {
+		unitOfTimeValue_ = unitOfTimeValue;
+		self.frames = [NSMutableArray arrayWithArray:arrayOfAnimationFrames];
+		duration_ = 0;
+		for( CCAnimationFrame *animFrame in frames_ ) {
+			duration_ += animFrame.unitsOfTime * unitOfTimeValue;
+			totalUnitsOfTime_ += animFrame.unitsOfTime;
+		}
+		
+		// average delay
+		delay_ = duration_ / frames_.count;
 	}
 	return self;
 }
 
 - (NSString*) description
 {
-	return [NSString stringWithFormat:@"<%@ = %08X | frames=%d, delay:%f>", [self class], self,
+	return [NSString stringWithFormat:@"<%@ = %08X | frames=%d, unitsOfTime=%d, unitOfTimeValuae=%f, delay:%f>", [self class], self,
 			[frames_ count],
+			totalUnitsOfTime_,
+			unitOfTimeValue_,
 			delay_
 			];
 }
@@ -83,9 +150,22 @@
 	[super dealloc];
 }
 
+-(void) setDelay:(float)delay
+{
+	delay_ = delay;
+	
+	duration_ = [frames_ count] * delay;
+}
+
 -(void) addFrame:(CCSpriteFrame*)frame
 {
-	[frames_ addObject:frame];
+	CCAnimationFrame *animFrame = [[CCAnimationFrame alloc] initWithSpriteFrame:frame unitsOfTime:1 offset:CGPointZero];
+	[frames_ addObject:animFrame];
+	[animFrame release];
+	
+	// update duration
+	duration_ += delay_;
+	totalUnitsOfTime_++;
 }
 
 -(void) addFrameWithFilename:(NSString*)filename
@@ -93,14 +173,15 @@
 	CCTexture2D *texture = [[CCTextureCache sharedTextureCache] addImage:filename];
 	CGRect rect = CGRectZero;
 	rect.size = texture.contentSize;
-	CCSpriteFrame *frame = [CCSpriteFrame frameWithTexture:texture rect:rect];
-	[frames_ addObject:frame];
+	CCSpriteFrame *spriteFrame = [CCSpriteFrame frameWithTexture:texture rect:rect];
+
+	[self addFrame:spriteFrame];
 }
 
 -(void) addFrameWithTexture:(CCTexture2D*)texture rect:(CGRect)rect
 {
 	CCSpriteFrame *frame = [CCSpriteFrame frameWithTexture:texture rect:rect];
-	[frames_ addObject:frame];
+	[self addFrame:frame];
 }
 
 @end
