@@ -105,6 +105,101 @@ static CCAnimationCache *sharedAnimationCache_=nil;
 
 #pragma mark CCAnimationCache - from file
 
+-(void) parseVersion1:(NSDictionary*)animations
+{
+	NSArray* animationNames = [animations allKeys];
+	CCSpriteFrameCache *frameCache = [CCSpriteFrameCache sharedSpriteFrameCache];
+
+	for( NSString *name in animationNames ) {
+		NSDictionary* animationDict = [animations objectForKey:name];
+		NSArray *frameNames = [animationDict objectForKey:@"frames"];
+		NSNumber *delay = [animationDict objectForKey:@"delay"];
+		CCAnimation* animation = nil;
+		
+		if ( frameNames == nil ) {
+			CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' found in dictionary without any frames - cannot add to animation cache.", name);
+			continue;
+		}
+		
+		NSMutableArray *frames = [NSMutableArray arrayWithCapacity:[frameNames count]];
+		
+		for( NSString *frameName in frameNames ) {
+			CCSpriteFrame *spriteFrame = [frameCache spriteFrameByName:frameName];
+			
+			if ( ! spriteFrame ) {
+				CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' refers to frame '%@' which is not currently in the CCSpriteFrameCache. This frame will not be added to the animation.", name, frameName);
+				
+				continue;
+			}
+			
+			CCAnimationFrame *animFrame = [[CCAnimationFrame alloc] initWithSpriteFrame:spriteFrame unitsOfTime:1 offset:CGPointZero];
+			[frames addObject:animFrame];
+			[animFrame release];
+		}
+		
+		if ( [frames count] == 0 ) {
+			CCLOG(@"cocos2d: CCAnimationCache: None of the frames for animation '%@' were found in the CCSpriteFrameCache. Animation is not being added to the Animation Cache.", name);
+			continue;
+		} else if ( [frames count] != [frameNames count] ) {
+			CCLOG(@"cocos2d: CCAnimationCache: An animation in your dictionary refers to a frame which is not in the CCSpriteFrameCache. Some or all of the frames for the animation '%@' may be missing.", name);
+		}
+		
+		animation = [CCAnimation animationWithFrames:frames unitOfTimeValue:[delay floatValue]];
+		
+		[[CCAnimationCache sharedAnimationCache] addAnimation:animation name:name];
+	}	
+}
+
+-(void) parseVersion2:(NSDictionary*)animations
+{
+	NSArray* animationNames = [animations allKeys];
+	CCSpriteFrameCache *frameCache = [CCSpriteFrameCache sharedSpriteFrameCache];
+	
+	for( NSString *name in animationNames )
+	{
+		NSDictionary* animationDict = [animations objectForKey:name];
+
+//		BOOL loop = [[animationDict objectForKey:@"loop"] boolValue];
+//		BOOL restoreOriginalFrame = [[animationDict objectForKey:@"restoreOriginalFrame"] boolValue];
+
+		NSArray *frameArray = [animationDict objectForKey:@"frames"];
+		
+		
+		if ( frameArray == nil ) {
+			CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' found in dictionary without any frames - cannot add to animation cache.", name);
+			continue;
+		}
+
+		// Array of AnimationFrames
+		NSMutableArray *array = [[NSMutableArray alloc] initWithCapacity:[frameArray count]];
+
+		for( NSDictionary *entry in frameArray ) {
+			NSString *spriteFrameName = [entry objectForKey:@"spriteframe"];
+			CCSpriteFrame *spriteFrame = [frameCache spriteFrameByName:spriteFrameName];
+			
+			if( ! spriteFrame ) {
+				CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' refers to frame '%@' which is not currently in the CCSpriteFrameCache. This frame will not be added to the animation.", name, spriteFrameName);
+				
+				continue;
+			}
+
+			NSUInteger unitsOfTime = [[entry objectForKey:@"units of time"] intValue];
+			CGPoint offset =  CCPointFromString( [entry objectForKey:@"offset"] );
+			
+			CCAnimationFrame *animFrame = [[CCAnimationFrame alloc] initWithSpriteFrame:spriteFrame unitsOfTime:unitsOfTime offset:offset];
+			
+			[array addObject:animFrame];
+			[animFrame release];
+		}
+		
+		float unitOfTimeValue = [[animationDict objectForKey:@"unit of time value"] floatValue];
+		CCAnimation *animation = [[CCAnimation alloc] initWithFrames:array unitOfTimeValue:unitOfTimeValue];
+		[array release];
+				
+		[[CCAnimationCache sharedAnimationCache] addAnimation:animation name:name];
+	}
+}
+
 -(void)addAnimationsWithDictionary:(NSDictionary *)dictionary
 {
 	NSDictionary *animations = [dictionary objectForKey:@"animations"];
@@ -113,46 +208,25 @@ static CCAnimationCache *sharedAnimationCache_=nil;
 		CCLOG(@"cocos2d: CCAnimationCache: No animations were found in provided dictionary.");
 		return;
 	}
+	
+	NSUInteger version = 1;
+	NSDictionary *properties = [dictionary objectForKey:@"properties"];
+	if( properties )
+		version = [[properties objectForKey:@"format"] intValue];
+	
+	NSArray *spritesheets = [properties objectForKey:@"spritesheets"];
+	for( NSString *name in spritesheets )
+		[[CCSpriteFrameCache sharedSpriteFrameCache] addSpriteFramesWithFile:name];
 
-	NSArray* animationNames = [animations allKeys];
-
-	CCSpriteFrameCache *frameCache = [CCSpriteFrameCache sharedSpriteFrameCache];
-
-	for( NSString *name in animationNames ) {
-		NSDictionary* animationDict = [animations objectForKey:name];
-		NSArray *frameNames = [animationDict objectForKey:@"frames"];
-		NSNumber *delay = [animationDict objectForKey:@"delay"];
-		CCAnimation* animation = nil;
-
-		if ( frameNames == nil ) {
-			CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' found in dictionary without any frames - cannot add to animation cache.", name);
-			continue;
-		}
-
-		NSMutableArray *frames = [NSMutableArray arrayWithCapacity:[frameNames count]];
-
-		for( NSString *frameName in frameNames ) {
-			CCSpriteFrame *frame = [frameCache spriteFrameByName:frameName];
-
-			if ( frame )
-				[frames addObject:frame];
-			else
-				CCLOG(@"cocos2d: CCAnimationCache: Animation '%@' refers to frame '%@' which is not currently in the CCSpriteFrameCache. This frame will not be added to the animation.", name, frameName);
-		}
-
-		if ( [frames count] == 0 ) {
-			CCLOG(@"cocos2d: CCAnimationCache: None of the frames for animation '%@' were found in the CCSpriteFrameCache. Animation is not being added to the Animation Cache.", name);
-			continue;
-		} else if ( [frames count] != [frameNames count] ) {
-			CCLOG(@"cocos2d: CCAnimationCache: An animation in your dictionary refers to a frame which is not in the CCSpriteFrameCache. Some or all of the frames for the animation '%@' may be missing.", name);
-		}
-
-		if ( delay != nil )
-			animation = [CCAnimation animationWithFrames:frames delay:[delay floatValue]];
-		else
-			animation = [CCAnimation animationWithFrames:frames];
-
-		[[CCAnimationCache sharedAnimationCache] addAnimation:animation name:name];
+	switch (version) {
+		case 1:
+			[self parseVersion1:animations];
+			break;
+		case 2:
+			[self parseVersion2:animations];
+			break;
+		default:
+			NSAssert(NO, @"Invalid animation format");
 	}
 }
 
